# python_tutorial

./: .gitignore  Lesson3_module.py  README.md  pyproject.toml  requirements.txt
cases/bullshit_generator/: Bullshit.py  main.py
cases/leaflet/: taipei_cafe_map.html  web_server.py
cases/linebot/: .gitignore  RichMenu_add.py  RichMenu_setForAllUser.py  RichMenu_upload.py
cases/pokemon/: .gitignore
