[tool.poetry]
name = "python-tutorial"
version = "0.1.0"
description = ""
authors = ["Marcus <s09203647@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11"
Flask = "3.0.3"
requests = "2.31.0"
ipykernel = "6.29.5"
jupyter = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
